--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: ^0.68.0
   provider: ^6.1.2
   flutter_lucide: ^1.6.1
+  go_router: ^14.6.3
 
 dev_dependencies:
   flutter_test:
