--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   provider: ^6.1.2
   flutter_lucide: ^1.6.1
   go_router: ^14.6.3
+  dio: ^5.7.0
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
