--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   go_router: ^14.6.3
   dio: ^5.7.0
   shared_preferences: ^2.3.5
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
