--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   dio: ^5.7.0
   shared_preferences: ^2.3.5
   flutter_spinkit: ^5.2.1
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
