--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   shared_preferences: ^2.3.5
   flutter_spinkit: ^5.2.1
   video_player: ^2.9.2
+  firebase_core: ^3.10.1
+  firebase_analytics: ^11.4.1
+  firebase_messaging: ^15.2.1
 
 dev_dependencies:
   flutter_test:
